# the-foundry-sandbox

./: .gitignore  DEBUG.md  README.md  pyproject.toml
src/api/: calculator.py  main.py
src/app/: main.py
src/foundry/agents/: claude_cli.py
src/foundry/agents/prompts/: implement.md  plan.md  verify.md
static/: app.js  index.html
tests/: test_api.py  test_app.py  test_calculator.py
