[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-api"
version = "0.1.0"
description = "FastAPI server for The Foundry orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
