[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-api"
version = "0.1.0"
description = "FastAPI server for The Foundry orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
